Continued work on the screen layout
started to layout a grid approach for link management.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- <script>
+  const cors = require('cors'); //<-- required installing 'cors' (npm i cors --save)
+  const express = require('express');
+  const app = express();
+  app.use(cors()); //<-- That`s it, no more code needed!  
+  </script> -->
+
   <meta charset="utf-8">
   <title>MyNg7</title>
   <base href="/">
@@ -11,4 +18,4 @@
 <body>
   <app-root></app-root>
 </body>
-</html>
+</html> 
